Change log for java-dirq:

???	???

1.7	Fri Nov 27 2015
	* [lc] now using the checkstyle maven plugin
	* [lc] now using Java NIO instead of POSIX calls through JNA
	* [lc] removed all external runtime dependencies (jna and commons-lang3)
	* [lc] the remove() method can now throw an IOException

1.6	Tue Nov  3 2015
	* [lc] major code cleanup

1.5	Tue Mar 31 2015
	* [lc] fixed NPE in QueueSimple's count() method

1.4	Mon Jul 15 2013
	* [lc] changed all the tests to use a temporary directory
	* [lc] cleaned the documentation
	* [lc] simplified the signature of the purge() methods
	* [lc] simplified the signature of the QueueSimple creator
	* [lc] added support for QueueSimple's rndHex attribute
	* [lc] added support for QueueSimple's maxLock and maxTemp attributes

1.3	Fri Apr 12 2013
	* [lc] first version recording changes...

[lc] = Lionel Cons <lionel.cons@cern.ch>
[mp] = Massimo Paladin <massimo.paladin@gmail.com>